Exclude newrelic-logging itself from logging

--- a/charts/newrelic-logging/values.yaml
+++ b/charts/newrelic-logging/values.yaml
@@ -334,7 +334,8 @@ daemonSet:
   annotations: {}
 
 # Annotations to add to the resulting Pods of the DaemonSet.
-podAnnotations: {}
+podAnnotations:
+  fluentbit.io/exclude: "true"
 
 # When low data mode is enabled only minimal attributes are added to the logs. Kubernetes labels and
 # annotations are not included. The plugin.type, plugin.version and plugin.source attributes are minified
