Fix labels (release name)

--- a/charts/cert-manager/values.yaml
+++ b/charts/cert-manager/values.yaml
@@ -5,6 +5,9 @@ customer: hydra
 purpose: dataplatform
 stage: dev
 
+fullnameOverride: "cert-manager"
+nameOverride: "cert-manager"
+
 # Default values for cert-manager.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
