--- a/charts/nifikop/templates/service_account.yaml
+++ b/charts/nifikop/templates/service_account.yaml
@@ -6,7 +6,7 @@ metadata:
     app: {{ template "nifikop.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     heritage: {{ .Release.Service }}
-    release: {{ .Release.Name }}
+    release: nifikop
     {{- include "userdefined.labels" . }}
   annotations:
     {{- include "userdefined.annotations" . }}
