--- a/charts/nifikop/values.yaml
+++ b/charts/nifikop/values.yaml
@@ -3,6 +3,9 @@ customer: hydra
 purpose: dataplatform
 stage: dev
 
+fullnameOverride: "nifikop"
+nameOverride: "nifikop"
+
 ## NiFi Operator Image
 ##
 image:
