--- a/charts/nifikop/templates/service.yaml
+++ b/charts/nifikop/templates/service.yaml
@@ -9,7 +9,7 @@ metadata:
     app: {{ template "nifikop.name" . }}-metrics
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     heritage: {{ .Release.Service }}
-    release: {{ .Release.Name }}
+    release: nifikop
     {{- include "userdefined.labels" . }}
   annotations:
     {{- include "userdefined.annotations" . }}
