--- a/charts/traefik-data/values.yaml
+++ b/charts/traefik-data/values.yaml
@@ -3,6 +3,9 @@ customer: hydra
 purpose: dataplatform
 stage: dev
 
+fullnameOverride: "traefik-data"
+nameOverride: "traefik-data"
+
 # Default values for Traefik
 image:
   # -- Traefik image host registry
