--- a/charts/aws-load-balancer/templates/servicemonitor.yaml
+++ b/charts/aws-load-balancer/templates/servicemonitor.yaml
@@ -14,7 +14,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
     {{- end }}
 spec:
-  jobLabel: {{ .Release.Name }}
+  jobLabel: aws-load-balancer-controller
   namespaceSelector:
     matchNames:
       - {{ .Release.Namespace }}
