do not recreate secret if already exists

--- a/charts/external-secrets/templates/webhook-secret.yaml
+++ b/charts/external-secrets/templates/webhook-secret.yaml
@@ -1,4 +1,6 @@
 {{- if and .Values.webhook.create (not .Values.webhook.certManager.enabled) }}
+{{- $secret := lookup "v1" "Secret" .Release.Namespace (printf "%s-secret-%s-%s-%s-wh-%s" .Values.k8sPrefix .Values.customer .Values.purpose (include "external-secrets.fullname" .) .Values.stage) -}}
+{{- if not $secret -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -11,4 +13,5 @@ metadata:
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+{{- end -}}
 {{- end }}
