aws-load-balancer,karpenter: do not recreate webhook secret if already exists

--- a/charts/karpenter/templates/secret-webhook-cert.yaml
+++ b/charts/karpenter/templates/secret-webhook-cert.yaml
@@ -1,4 +1,6 @@
 {{- if .Values.webhook.enabled }}
+{{- $secret := lookup "v1" "Secret" .Release.Namespace (printf "%s-secret-%s-%s-%s-cert-%s" .Values.k8sPrefix .Values.customer .Values.purpose (include "karpenter.fullname" .) .Values.stage) -}}
+{{- if not $secret -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -11,4 +13,5 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 # data: {} # Injected by karpenter-webhook
+{{- end -}}
 {{- end }}
