--- a/charts/nifi-registry/templates/externalsecret.yaml
+++ b/charts/nifi-registry/templates/externalsecret.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.flowProvider.git.enabled }}
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
@@ -26,3 +27,4 @@ spec:
           {{- include "nifi-registry.labels" . | nindent 10 }}
       engineVersion: v2
       type: Opaque
+{{- end }}
