--- a/charts/external-secrets/templates/webhook-secret.yaml
+++ b/charts/external-secrets/templates/webhook-secret.yaml
@@ -1,6 +1,5 @@
 {{- if and .Values.webhook.create (not .Values.webhook.certManager.enabled) }}
-{{- $secret := lookup "v1" "Secret" .Release.Namespace (printf "%s-secret-%s-%s-%s-wh-%s" .Values.k8sPrefix .Values.customer .Values.purpose (include "external-secrets.fullname" .) .Values.stage) -}}
-{{- if not $secret -}}
+{{- $secret := lookup "v1" "Secret" .Release.Namespace (printf "%s-secret-%s-%s-%s-wh-%s" .Values.k8sPrefix .Values.customer .Values.purpose (include "external-secrets.fullname" .) .Values.stage) }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -13,5 +12,13 @@ metadata:
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-{{- end -}}
+{{- if $secret }}
+data:
+  ca.crt: {{ index $secret.data "ca.crt" }}
+  ca.key: {{ index $secret.data "ca.key" }}
+  tls.crt: {{ index $secret.data "tls.crt" }}
+  tls.key: {{ index $secret.data "tls.key" }}
+{{- else }}
+# data: {} # Injected by external-secrets-webhook
+{{- end }}
 {{- end }}
