--- a/charts/traefik-admin/templates/middlewares.yaml
+++ b/charts/traefik-admin/templates/middlewares.yaml
@@ -2,7 +2,7 @@ apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   annotations:
-    kubernetes.io/ingress.class: traefik-admin
+    kubernetes.io/ingress.class: {{ template "traefik.fullname" . }}
   labels:
     {{- include "traefik.labels" $ | nindent 4 }}
     traffic-type: admin
@@ -17,7 +17,7 @@ apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   annotations:
-    kubernetes.io/ingress.class: traefik-admin
+    kubernetes.io/ingress.class: {{ template "traefik.fullname" . }}
   labels:
     {{- include "traefik.labels" $ | nindent 4 }}
     traffic-type: admin
@@ -36,7 +36,7 @@ apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   annotations:
-    kubernetes.io/ingress.class: traefik-admin
+    kubernetes.io/ingress.class: {{ template "traefik.fullname" . }}
   labels:
     {{- include "traefik.labels" $ | nindent 4 }}
     traffic-type: admin
