--- a/charts/traefik-admin/templates/rbac/role.yaml
+++ b/charts/traefik-admin/templates/rbac/role.yaml
@@ -18,6 +18,20 @@ rules:
     resources:
       - services
       - endpoints
+    verbs:
+      - get
+      - list
+      - watch
+  # Required while https://github.com/traefik/traefik/issues/7097#issuecomment-1983581843
+  - apiGroups:
+      - ""
+    resources:
+      - secrets
+    verbs:
+      - list
+  - apiGroups:
+      - ""
+    resources:
       - secrets
     verbs:
       - get
@@ -44,9 +58,6 @@ rules:
 {{- if (and (has . $CRDNamespaces) $.Values.providers.kubernetesCRD.enabled) }}
   - apiGroups:
       - traefik.io
-      {{- if semverCompare "<3.0.0-0" (include "imageVersion" $) }}
-      - traefik.containo.us
-      {{- end }}
     resources:
       - ingressroutes
       - ingressroutetcps
@@ -57,9 +68,7 @@ rules:
       - tlsstores
       - traefikservices
       - serverstransports
-      {{- if semverCompare ">=3.0.0-0" (include "imageVersion" $) }}
       - serverstransporttcps
-      {{- end }}
     verbs:
       - get
       - list
@@ -74,6 +83,38 @@ rules:
       - podsecuritypolicies
     verbs:
       - use
+{{- end -}}
+{{- if $.Values.experimental.kubernetesGateway.enabled }}
+  - apiGroups:
+      - ""
+    resources:
+      - namespaces
+    verbs:
+      - list
+      - watch
+  - apiGroups:
+      - gateway.networking.k8s.io
+    resources:
+      - gatewayclasses
+      - gateways
+      - httproutes
+      - referencegrants
+      - tcproutes
+      - tlsroutes
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - gateway.networking.k8s.io
+    resources:
+      - gatewayclasses/status
+      - gateways/status
+      - httproutes/status
+      - tcproutes/status
+      - tlsroutes/status
+    verbs:
+      - update
 {{- end -}}
 {{- end -}}
 {{- end -}}
