--- a/charts/traefik-admin/templates/tlsoption.yaml
+++ b/charts/traefik-admin/templates/tlsoption.yaml
@@ -2,13 +2,16 @@
 apiVersion: traefik.io/v1alpha1
 kind: TLSOption
 metadata:
-  name: {{ $name }}
-  namespace: {{ template "traefik.namespace" $ }}
+  annotations:
+    kubernetes.io/ingress.class: {{ template "traefik.fullname" . }}
   labels:
     {{- include "traefik.labels" $ | nindent 4 }}
     {{- with $config.labels }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
+    traffic-type: admin
+  name: {{ $name }}
+  namespace: {{ template "traefik.namespace" $ }}
 spec:
   {{- with $config.alpnProtocols }}
   alpnProtocols:
@@ -25,18 +28,15 @@ spec:
   {{- with $config.curvePreferences }}
   curvePreferences:
   {{- toYaml . | nindent 4 }}
-  {{- end }}  
-  {{- if $config.maxVersion }}
-  maxVersion: {{ $config.maxVersion }}
   {{- end }}
-  {{- if $config.minVersion }}
-  minVersion: {{ $config.minVersion }}
+  {{- with $config.maxVersion }}
+  maxVersion: {{ . }}
   {{- end }}
-  {{- if $config.preferServerCipherSuites }}
-  preferServerCipherSuites: {{ $config.preferServerCipherSuites }}
+  {{- with $config.minVersion }}
+  minVersion: {{ . }}
   {{- end }}
-  {{- if $config.sniStrict }}
-  sniStrict: {{ $config.sniStrict }}
+  {{- with $config.sniStrict }}
+  sniStrict: {{ . }}
   {{- end }}
 ---
 {{- end -}}
