--- a/charts/traefik-data/templates/rbac/serviceaccount.yaml
+++ b/charts/traefik-data/templates/rbac/serviceaccount.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.serviceAccount.name -}}
 kind: ServiceAccount
 apiVersion: v1
 metadata:
@@ -9,3 +10,4 @@ metadata:
   {{- with .Values.serviceAccountAnnotations }}
   {{- toYaml . | nindent 4 }}
   {{- end }}
+{{- end -}}
