--- a/charts/traefik-admin/templates/tlsstore.yaml
+++ b/charts/traefik-admin/templates/tlsstore.yaml
@@ -3,7 +3,7 @@ apiVersion: traefik.io/v1alpha1
 kind: TLSStore
 metadata:
   annotations:
-    kubernetes.io/ingress.class: {{ template "traefik.fullname" . }}
+    kubernetes.io/ingress.class: {{ template "traefik.fullname" $ }}
   labels:
     {{- include "traefik.labels" $ | nindent 4 }}
     traffic-type: admin
