--- a/charts/traefik-data/values.yaml
+++ b/charts/traefik-data/values.yaml
@@ -570,16 +570,15 @@ tracing:
         insecureSkipVerify:
 
 # -- Global command arguments to be passed to all traefik's pods
-globalArguments:
-- "--global.checknewversion"
-- "--global.sendanonymoususage"
+globalArguments: []
 
 #
 # Configure Traefik static configuration
 # -- Additional arguments to be passed at Traefik's binary
 # All available options available on https://docs.traefik.io/reference/static-configuration/cli/
 ## Use curly braces to pass values: `helm install --set="additionalArguments={--providers.kubernetesingress.ingressclass=traefik-internal,--log.level=DEBUG}"`
-additionalArguments: []
+additionalArguments:
+- "--ping.entrypoint=websecure"
 #  - "--providers.kubernetesingress.ingressclass=traefik-internal"
 #  - "--log.level=DEBUG"
 
@@ -696,7 +695,7 @@ ports:
     # targetPort: 80
     ## -- The port protocol (TCP/UDP)
     protocol: TCP
-    # nodePort: 32443
+    nodePort: 30443
     ## -- Specify an application protocol. This may be used as a hint for a Layer 7 load balancer.
     # appProtocol: https
     #
