--- a/charts/samlproxy/values.yaml
+++ b/charts/samlproxy/values.yaml
@@ -43,5 +43,5 @@ tolerations: []
 affinity: {}
 
 proxy:
-  backend: https://awsd-svc-hydra-dataplatform-traefik-admin-dev.awsd-ns-hydra-dataplatform-traefik-admin-dev.svc.cluster.local
+  backend: https://awsd-svc-hydra-dataplatform-traefik-admin.awsd-ns-hydra-dataplatform-traefik-admin-dev
   hostname: hnd-nlb-hydra-dataplatform-admin-7a1d846d5e00a3dc.elb.eu-west-1.amazonaws.com
