--- a/charts/traefik-data/values.yaml
+++ b/charts/traefik-data/values.yaml
@@ -141,10 +141,13 @@ core:
 # Traefik experimental features
 experimental:
   # -- Enable traefik experimental plugins
-  plugins: {}
-  # demo:
-  #   moduleName: github.com/traefik/plugindemo
-  #   version: v0.2.1
+  plugins:
+    blockpathplugin:
+      moduleName: github.com/traefik/plugin-blockpath
+      version: v0.2.1
+    checkheadersplugin:
+      moduleName: github.com/dkijkuit/checkheadersplugin
+      version: v0.3.1
   kubernetesGateway:
     # -- Enable traefik experimental GatewayClass CRD
     enabled: false
