--- a/charts/traefik-data/values.yaml
+++ b/charts/traefik-data/values.yaml
@@ -252,7 +252,7 @@ providers:
     allowExternalNameServices: false
     # -- Allows to return 503 when there is no endpoints available
     allowEmptyServices: false
-    ingressClass: traefik-data
+    # ingressClass: traefik-internal
     labelSelector: traffic-type=data
     # -- Array of namespaces to watch. If left empty, Traefik watches all namespaces.
     namespaces: []
@@ -265,7 +265,7 @@ providers:
     allowExternalNameServices: true
     # -- Allows to return 503 when there is no endpoints available
     allowEmptyServices: false
-    ingressClass: traefik-data
+    # ingressClass: traefik-internal
     labelSelector: traffic-type=data
     # -- Array of namespaces to watch. If left empty, Traefik watches all namespaces.
     namespaces: []
