--- a/charts/traefik-data/values.yaml
+++ b/charts/traefik-data/values.yaml
@@ -30,7 +30,7 @@ deployment:
   # -- Deployment or DaemonSet
   kind: Deployment
   # -- Number of pods of the deployment (only applies when kind == Deployment)
-  replicas: 1
+  replicas: 3
   # -- Number of old history to retain to allow rollback (If not set, default Kubernetes value is set to 10)
   # revisionHistoryLimit: 1
   # -- Amount of time (in seconds) before Kubernetes will send the SIGKILL signal if Traefik does not shut down
@@ -40,13 +40,13 @@ deployment:
   ## Override the liveness/readiness port. This is useful to integrate traefik
   ## with an external Load Balancer that performs healthchecks.
   ## Default: ports.traefik.port
-  # healthchecksPort: 9000
+  healthchecksPort: 8443
   ## Override the liveness/readiness host. Useful for getting ping to respond on non-default entryPoint.
   ## Default: ports.traefik.hostIP if set, otherwise Pod IP
   # healthchecksHost: localhost
   ## Override the liveness/readiness scheme. Useful for getting ping to
   ## respond on websecure entryPoint.
-  # healthchecksScheme: HTTPS
+  healthchecksScheme: HTTPS
   ## Override the readiness path.
   ## Default: /ping
   # readinessPath: /ping
@@ -317,17 +317,17 @@ logs:
   general:
     # -- By default, the logs use a text format (common), but you can
     # also ask for the json format in the format option
-    # format: json
+    format: common
     # By default, the level is set to ERROR.
     # -- Alternative logging levels are DEBUG, PANIC, FATAL, ERROR, WARN, and INFO.
     level: INFO
   access:
     # -- To enable access logs
-    enabled: false
+    enabled: true
     ## By default, logs are written using the Common Log Format (CLF) on stdout.
     ## To write logs in JSON, use json in the format option.
     ## If the given format is unsupported, the default (CLF) is used instead.
-    # format: json
+    format: common
     # filePath: "/var/log/traefik/access.log
     ## To write the logs in an asynchronous fashion, specify a bufferingSize option.
     ## This option represents the number of log lines Traefik will keep in memory before writing
@@ -351,7 +351,7 @@ logs:
         # ClientUsername: drop
       headers:
         # -- Available modes: keep, drop, redact.
-        defaultmode: drop
+        defaultmode: keep
         # -- Names of the headers to limit.
         names: {}
         ## Examples:
@@ -1003,4 +1003,4 @@ extraObjects: []
 # namespaceOverride: traefik
 #
 ## -- This will override the default app.kubernetes.io/instance label for all Objects.
-# instanceLabelOverride: traefik
+instanceLabelOverride: traefik-data
