--- a/charts/traefik-admin/templates/nginx-errors-deployment.yaml
+++ b/charts/traefik-admin/templates/nginx-errors-deployment.yaml
@@ -14,6 +14,7 @@ spec:
     metadata:
       annotations:
         checksum/configmap-errors-html: {{ include (print $.Template.BasePath "/nginx-errors-html-cm.yaml") . | sha256sum }}
+        fluentbit.io/exclude: "true"
       labels: {{ include "traefik.labels" . | nindent 8 }}
         k8s-app: nginx-errors
     spec:
