--- a/charts/traefik-admin/templates/nginx-fallback-deployment.yaml
+++ b/charts/traefik-admin/templates/nginx-fallback-deployment.yaml
@@ -2,21 +2,21 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels: {{ include "traefik.labels" . | nindent 4 }}
-    k8s-app: nginx-errors
-  name: {{.Values.k8sPrefix}}-deploy-{{.Values.customer}}-{{.Values.purpose}}-nginx-errors-{{.Values.stage}}
+    k8s-app: nginx-fallback
+  name: {{.Values.k8sPrefix}}-deploy-{{.Values.customer}}-{{.Values.purpose}}-nginx-fallback-{{.Values.stage}}
   namespace: {{ template "traefik.namespace" . }}
 spec:
   replicas: 3
   selector:
     matchLabels: {{ include "traefik.labelselector" . | nindent 6 }}
-      k8s-app: nginx-errors
+      k8s-app: nginx-fallback
   template:
     metadata:
       annotations:
-        checksum/configmap-errors-html: {{ include (print $.Template.BasePath "/nginx-errors-html-cm.yaml") . | sha256sum }}
+        checksum/configmap-errors-html: {{ include (print $.Template.BasePath "/nginx-fallback-html-cm.yaml") . | sha256sum }}
         fluentbit.io/exclude: "true"
       labels: {{ include "traefik.labels" . | nindent 8 }}
-        k8s-app: nginx-errors
+        k8s-app: nginx-fallback
     spec:
       affinity:
         podAntiAffinity:
@@ -27,7 +27,7 @@ spec:
                 - key: k8s-app
                   operator: In
                   values:
-                  - nginx-errors
+                  - nginx-fallback
               topologyKey: topology.kubernetes.io/zone
             weight: 100
       containers:
@@ -39,8 +39,8 @@ spec:
             protocol: TCP
         volumeMounts:
           - mountPath: /usr/share/nginx/html
-            name: nginx-errors-html
+            name: nginx-fallback-html
       volumes:
       - configMap:
-          name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-nginx-errors-html-{{.Values.stage}}
-        name: nginx-errors-html
+          name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-nginx-fallback-html-{{.Values.stage}}
+        name: nginx-fallback-html
