--- a/charts/traefik-admin/templates/nginx-fallback-ingress.yaml
+++ b/charts/traefik-admin/templates/nginx-fallback-ingress.yaml
@@ -18,3 +18,13 @@ spec:
       port:
         number: 80
   ingressClassName: {{.Values.k8sPrefix}}-ingressclass-{{.Values.customer}}-{{.Values.purpose}}-{{ template "traefik.fullname" . }}-{{.Values.stage}}
+  rules:
+  - http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: {{.Values.k8sPrefix}}-svc-{{.Values.customer}}-{{.Values.purpose}}-nginx-fallback-{{.Values.stage}}
+            port:
+              number: 80
